# case-infinity

./: README.md  infinity.py  models.py  processing.py  pyproject.toml  solution.py
examples/: example_0.yaml
